docker/iptables-save.txt
# Generated by iptables-save v1.4.21 on Fri Apr 29 11:33:53 2022
*nat
:PREROUTING ACCEPT [11:1341]
:INPUT ACCEPT [8:1158]
:OUTPUT ACCEPT [1:88]
:POSTROUTING ACCEPT [1:88]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Fri Apr 29 11:33:53 2022
# Generated by iptables-save v1.4.21 on Fri Apr 29 11:33:53 2022
*filter
:INPUT ACCEPT [46:4013]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [25:2212]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Fri Apr 29 11:33:53 2022
